tests/profile/error/time/missing_type.profile
{
  "version": { "major": 1, "minor": 0 },
  "time": {
  }
}
